--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   func: ^1.0.0
   intl: '>=0.14.0 <0.15.0'
+  petitparser: 1.7.0
   timezone: '>=0.4.3 <0.5.0'
 
 dev_dependencies:
