--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,15 @@
 name: date
-description: A simple Date implementation and other time related utilities.
-version: 0.0.2
-author: Tony Humbert <humbert.tony@yahoo.com>
-#homepage: https://www.example.com
+description: Hour, Date, Month implementations for Dart and other time related utilities.
+version: 2.2.0
+author: Tony Humbert <tony.humberts@gmail.com>
 
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: '>2.0.0-dev.61.0 <3.0.0'
 
 dependencies:
-  func: ^1.0.0
   intl: '>=0.14.0 <0.16.0'
-  petitparser: 1.7.0
-  timezone: '>=0.4.3 <0.5.0'
+  petitparser: 2.0.0
+  timezone: ^0.5.0-dev-3
 
 dev_dependencies:
-  test: '>=0.12.0 <0.13.0'
+  test: '>=1.3.0'
