--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.2.0
 author: Tony Humbert <tony.humberts@gmail.com>
 
 environment:
-  sdk: '>2.0.0-dev.61.0 <3.0.0'
+  sdk: '>2.0.0 <3.0.0'
 
 dependencies:
   intl: '>=0.14.0 <0.16.0'
