--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   intl: '>=0.14.0 <0.16.0'
   petitparser: 2.0.0
-  timezone: '>=0.5.0-dev-3 <1.0.0'
+  timezone: '>=0.5.5 <1.0.0'
 
 dev_dependencies:
   test: '>=1.3.0 <2.0.0'
