--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   intl: '>=0.14.0 <1.0.0'
-  petitparser: 2.0.0
+  petitparser: '>=3.0.0 <4.0.0'
   timezone: '>=0.5.5 <1.0.0'
 
 dev_dependencies:
