--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: date
 description: Hour, Date, Month implementations for Dart and other time related utilities.
-version: 2.2.0
+version: 2.4.0
 author: Tony Humbert <tony.humberts@gmail.com>
 
 environment:
@@ -12,5 +12,5 @@ dependencies:
   timezone: '>=0.5.5 <1.0.0'
 
 dev_dependencies:
-  pedantic: ^1.8.0
+  pedantic: '>=1.8.0 <2.0.0'
   test: '>=1.3.0 <2.0.0'
