--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: date
 description: Hour, Date, Month implementations for Dart and other time related utilities.
-version: 2.4.0
+version: 3.0.0
 author: Tony Humbert <tony.humberts@gmail.com>
 
 environment:
-  sdk: '>=2.7.2 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  intl: '>=0.16.0 <1.0.0'
-  petitparser: '>=3.0.0 <4.0.0'
-  timezone: '>=0.5.5 <1.0.0'
+  intl: ^0.17.0
+  petitparser: ^4.0.2
+  timezone: ^0.7.0-nullsafety.0
 
 dev_dependencies:
-  pedantic: '>=1.8.0 <2.0.0'
-  test: '>=1.3.0 <2.0.0'
+  pedantic: ^1.11.0
+  test: ^1.16.5
