--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,12 @@ description: Hour, Date, Month implementations for Dart and other time related u
 version: 3.0.6
 
 environment:
-  sdk: '>=2.19.0 <4.0.0'
+  sdk: ^3.0.2
 
 dependencies:
-  intl: ^0.17.0
+  intl: ^0.18.1
   petitparser: ^5.0.0
-  timezone: ^0.8.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   lints: ^2.0.0
